  * Int{32,64}.float_of_bits
  * Int{32,64}.bits_of_float
  (Jérémie Dimino)
- GPR#281: Switch the following externals to [@@unboxed]:
  * Sys.time (and [@@noalloc])
  * Pervasives.ldexp (and [@@noalloc])
  * Pervasives.compare for float, nativeint, int32, int64.
  (Bobot François)
- GPR#329: Add exists, for_all,  mem and memq functions in Array
  (Bernhard Schommer)
- GPR#356: Add [Format.kasprintf] (Jérémie Dimino, Mark Shinwell)

Type system:
- PR#5545: Type annotations on methods cannot control the choice of abbreviation
* PR#6465: allow incremental weakening of module aliases (Jacques Garrigue).
  This is done by adding equations to submodules when expanding aliases.
  In theory this may be incompatible is some corner cases defining a module
  type through inference, but no breakage known on published code.
- PR#6593: Functor application in tests/basic-modules fails after commit 15405

Toplevel and debugger:
- PR#6113: Add descriptions to directives, and display them via #help
  (Nick Giannarakis, Berke Durak, Francis Southern and Gabriel Scherer)
- PR#6396: Warnings-as-errors not properly flushed in the toplevel
  (Alain Frisch)
- PR#6468: toplevel now supports backtraces if invoked with OCAMLRUNPARAM=b
  (whitequark and Jake Donham,
   review by Gabriel Scherer and Jacques-Henri Jourdan)
- PR#6935, GPR#298: crash in debugger when load_printer is given a directory
  (Junsong Li, review by Gabriel Scherer)
- PR#6401: use proper error reporting for toplevel's environment
  initialization (Gabriel Scherer)
- PR#7081: report preprocessor warnings in the toplevel
  (Valentin Gatien-Baron, review by Jérémie Dimino)
- PR#7098: Loss of ppx context in toplevel after an exception
  (Alain Frisch, report by whitequark)
- PR#7101: The toplevel does not close in_channel for libraries specified on
  its command line (Alain Frisch)
- PR#7119: ocaml doesn't respect [@@@warning] (Alain Frisch, report by
  Gabriel Radanne)

Other libraries: